--- a/test/fixtures/bemhtml/browser.html
+++ b/test/fixtures/bemhtml/browser.html
@@ -6,6 +6,7 @@
 <div id="mocha"></div>
 <script src="mocha.js"></script>
 <script src="chai.js"></script>
+<script src="some-lib.js"></script>
 <script src="bundle/bundle.bemhtml.js"></script>
 <script>
   mocha.ui('bdd');
