Added bind polyfill for phantomjs

--- a/test/fixtures/bemhtml/browser.html
+++ b/test/fixtures/bemhtml/browser.html
@@ -4,6 +4,36 @@
 </head>
 <body>
 <div id="mocha"></div>
+<script>
+// PhantomJS does not have Function.prototype.bind
+if (!Function.prototype.bind) {
+  Function.prototype.bind = function(oThis) {
+    if (typeof this !== 'function') {
+      // closest thing possible to the ECMAScript 5
+      // internal IsCallable function
+      throw new TypeError('Function.prototype.bind - what is trying to be bound is not callable');
+    }
+
+    var aArgs   = Array.prototype.slice.call(arguments, 1),
+        fToBind = this,
+        fNOP    = function() {},
+        fBound  = function() {
+          return fToBind.apply(this instanceof fNOP
+                 ? this
+                 : oThis,
+                 aArgs.concat(Array.prototype.slice.call(arguments)));
+        };
+
+    if (this.prototype) {
+      // native functions don't have a prototype
+      fNOP.prototype = this.prototype;
+    }
+    fBound.prototype = new fNOP();
+
+    return fBound;
+  };
+}
+</script>
 <script src="mocha.js"></script>
 <script src="chai.js"></script>
 <script src="some-lib.js"></script>
